[package]
name = "PigLang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pig_lib"
path = "lib/pig.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pig_repl"
path = "repl/main.rs"

[[bin]]
name = "pig_app"
path = "src/main.rs"

[target.'cfg(unix)'.dependencies]
clap = "4.4.8"
nom = "7.1.3"
reedline = "0.25.0"
wasm-bindgen = "0.2.88"

[target.'cfg(windows)'.dependencies]
clap = "4.4.8"
nom = "7.1.3"
reedline = "0.25.0"
wasm-bindgen = "0.2.88"


[target.'cfg(target_family = "wasm")'.dependencies]
clap = "4.4.8"
nom = "7.1.3"
wasm-bindgen = "0.2.88"
